# temporal-registry

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/: .shared-config.yaml
.github/workflows/: build-docker-image.yaml  ci-python.yaml  publish-wheel.yaml
docker/: Dockerfile
scripts/: sync-shared  sync-shared-drift-check  sync-shared-python
temporal_registry/: __init__.py  __main__.py  config.py  config.yaml  config_schemas.py  logging_config.py  runtime.py  temporal_client.py
temporal_registry/http/: __init__.py  app.py  auth.py  body_limit.py  dependencies.py  observability.py
temporal_registry/http/routers/: __init__.py  health.py  payloads.py  registry.py  run.py  schedules.py  search_attributes.py  slug_counters.py
temporal_registry/http/schemas/: __init__.py  observability.py  requests.py  responses.py
temporal_registry/temporal/: __init__.py
temporal_registry/temporal/registry/: __init__.py  activities.py  activity_types.py  client.py  registry_schemas.py  workflow.py
tests/: test_namespace.py  test_registry_workflow.py  test_search_attributes.py  test_server_routes.py  test_temporal_clients.py
